# TTK4900-Master

./: CMakeLists.txt  README.md  main.cpp  stereoCalibTest.cpp  testFunctions.cpp  testFunctions.h
div_kode/: intr_calibration.py  stereoCalibrate.py  stereocalib_cornerExtract.py  test.py
div_kode/files/: D_l.txt  D_r.txt  K_l.txt  K_r.txt  cornersLeftStereoCalib.txt  cornersRightStereoCalib.txt
